# music_downloader

./: .dockerignore  .env.example  .env.template  .env.template.swp  .gitignore  Dockerfile  Dockerfile.universal  README.md  docker-compose.universal.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker-publish-universal.yml
app/: config.py  downloader.py  jobs.py  main.py  metube.py  pipeline.py  shortcut.py  uploader.py
app/static/: index.html
app/templates/: index.html
universal/: README.md  config.py  downloader.py  jobs.py  main.py  pipeline.py  uploader.py
universal/templates/: index.html
